# utilits

./: README.md
2048/: 2048.py  README.md
Markov Emulator/: CMakeLists.txt  README.md  main.cpp
Matrices/: determinant.py  inverseMatrix.py  matrixMultiply.py
Smart File Saver/: README.md  sfs.sh
Sudoku Solver/: README.md  sudoku.py
Testers/: somescript.sh
Turing to Markov/: CMakeLists.txt  README.md  output.cpp  output.hpp  turing-markov.cpp
Turing to Markov/lib_source/: processing.cpp  processing.hpp
